@@ -5,18 +5,21 @@ import com.google.api.client.extensions.java6.auth.oauth2.AuthorizationCodeInsta
 import com.google.api.client.extensions.jetty.auth.oauth2.LocalServerReceiver;
 import com.google.api.client.googleapis.auth.oauth2.GoogleAuthorizationCodeFlow;
 import com.google.api.client.googleapis.auth.oauth2.GoogleClientSecrets;
+import com.google.api.client.googleapis.json.GoogleJsonResponseException;
 import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.JsonFactory;
 import com.google.api.client.json.gson.GsonFactory;
 import com.google.api.client.util.store.FileDataStoreFactory;
 import com.google.api.services.drive.Drive;
 import com.google.api.services.drive.DriveScopes;
+import com.google.api.services.drive.model.File;
 import lombok.experimental.UtilityClass;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -27,7 +30,7 @@ import static org.munmanagerthymeleaf.drive.DocsService.APPLICATION_NAME;
 public class DriveService {
     private static final JsonFactory JSON_FACTORY = GsonFactory.getDefaultInstance();
     private static final String TOKENS_DIRECTORY_PATH = "tokens";
-    private static final List<String> SCOPES = Collections.singletonList(DriveScopes.DRIVE_METADATA_READONLY);
+    private static final List<String> SCOPES = List.of(DriveScopes.DRIVE_FILE);
     private static final String CREDENTIALS_FILE_PATH = "/credentials.json";
 
     static Credential driveGetCredentials(final NetHttpTransport HTTP_TRANSPORT) throws IOException {
@@ -51,7 +54,19 @@ public class DriveService {
                 .build();
     }
 
-    boolean makeNewFolder(){
-        return true;
+    public static String createFolder(final NetHttpTransport HTTP_TRANSPORT, Drive service) throws IOException {
+        File fileMetadata = new File();
+        fileMetadata.setMimeType("application/vnd.google-apps.folder")
+                .setName("Test");
+        try {
+            File file = service.files().create(fileMetadata)
+                    .setFields("id")
+                    .execute();
+            System.out.println("Folder ID: " + file.getId());
+            return file.getId();
+        } catch (GoogleJsonResponseException e) {
+            System.err.println("Unable to create folder: " + e.getDetails());
+            throw e;
+        }
     }
 }
